feat: enhance catalog utilities with advanced CLI capabilities
- jwt: Add --env/--export to format claims as shell exports, and --secret for HMAC signature verification.
- serve: Add --spa mode for single-page app 404 fallbacks to index.html and --auth for HTTP Basic Auth.
- killport: Add -i/--interactive confirmation prompt and -s/--signal selection (TERM vs KILL).
- hash: Add -r/--recursive directory manifest generation and --benchmark CPU throughput testing.
- nudge: Add --between working hours window constraint.
- typeit: Add -e/--enter auto-submit and -p/--password secure un-echoed prompt.
- README: Update all options blocks and usage documentation.